--- a/index.html
+++ b/index.html
@@ -42,44 +42,59 @@
 
       <div class="portfolio-cards">
         <div class="card">
+          <br>
           <img src="assets/img/lampada.png" alt="Lâmpada">
-          <h3>Lâmpada</h3>
-          <p>Controle de luz com interatividade.</p>
+          <br>
+          <a class="teste" href="portfólio-1242114138/Lampada/index.html">Lâmpada</a>
         </div>
+
         <div class="card">
+          <br>
           <img src="assets/img/calculadora.png" alt="Calculadora">
-          <h3>Calculadora</h3>
-          <p>Realiza operações matemáticas básicas.</p>
+          <br>
+          <a class="teste" href="portfólio-1242114138/Calculadora/index.html">Calculadora</a>
         </div>
+
         <div class="card">
+          <br>
           <img src="assets/img/oculto.png" alt="Número Oculto">
-          <h3>Número Oculto</h3>
-          <p>Número Oculto</p>
+          <br>
+          <a class="teste" href="portfólio-1242114138/número-oculto/index.html">Número Oculto</a>
         </div>
+
         <div class="card">
+          <br>
           <img src="assets/img/quiz.png" alt="Quiz">
-          <h3>Quiz</h3>
-          <p>Perguntas e respostas</p>
+          <br>
+           <a class="teste" href="portfólio-1242114138/quiz/index.html">Quiz</a>
         </div>
+
         <div class="card">
+          <br>
           <img src="ListaTarefas.png" alt="Lista de Tarefas">
-          <h3>Lista de Tarefas(Kanban)</h3>
-          <p>Organizando demandas de forma eficiente</p>
+          <br>
+          <a class="teste" href="#">Lista Tarefas</a>
         </div>
+
         <div class="card">
+          <br>
           <img src="ContaDigital.png" alt="Conta Digital">
-          <h3>Conta Digital</h3>
-          <p>Conta Digital</p>
+          <br>
+          <a class="teste" href="#">Conta Digital</a>
         </div>
+
         <div class="card">
+          <br>
           <img src="assets/img/carro.png" alt="Selecione um carro">
-          <h3>Selecione um carro</h3>
-          <p>Selecione um carro</p>
+          <br>
+          <a class="teste" href="portfólio-1242114138/carro/index.html">Selecione um Carro</a>
         </div>
+
         <div class="card">
+          <br>
           <img src="assets/img/memoria.png" alt="Jogo da Memória">
-          <h3>Jogo da Memória</h3>
-          <p>Jogo da Memória</p>
+          <br>
+          <a class="teste" href="portfólio-1242114138/Jogo-da-memoria/index.html">Jogo da Memória</a>
         </div>
       </div>
 
