--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
         <div class="card">
           <br>
-          <img src="ListaTarefas.png" alt="Lista de Tarefas">
+          <img src="assets/img/kanban.png" alt="Lista de Tarefas">
           <br>
-          <a class="teste" href="#">Lista Tarefas</a>
+          <a class="teste" href="portfólio-1242114138/4-lista-de-tarefas-kanban/index.html">Lista Tarefas</a>
         </div>
 
         <div class="card">
           <br>
-          <img src="ContaDigital.png" alt="Conta Digital">
+          <img src="assets/img/BankSE.png" alt="Conta Digital">
           <br>
-          <a class="teste" href="#">Conta Digital</a>
+          <a class="teste" href="portfólio-1242114138/7-conta-digital/index.html">Conta Digital</a>
         </div>
 
         <div class="card">
