--- a/portfólio-1242114138/1- número-oculto/index.html
+++ b/portfólio-1242114138/1- número-oculto/index.html
@@ -26,5 +26,8 @@
     <button onclick="resetGame()">Reiniciar Jogo</button>
   </div>
   <script src="script.js"></script>
+    <footer>
+    <p>&copy; 2025 Bruno Alexandre. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
