--- a/portfólio-1242114138/5- carro/index.html
+++ b/portfólio-1242114138/5- carro/index.html
@@ -24,6 +24,10 @@
     <div class="btn" id="resetar">Resetar</div>
   </div>
 
+  <footer>
+    <p>&copy; 2025 Bruno Alexandre. Todos os direitos reservados.</p>
+  </footer>
+
   <audio id="carSound" src="assets/audio/cars.mp3"></audio>
 <script src="script.js"></script>
 </body>
