--- a/portfólio-1242114138/6- Jogo-da-memoria/index.html
+++ b/portfólio-1242114138/6- Jogo-da-memoria/index.html
@@ -14,7 +14,7 @@
       <div class="game-board" id="game-board"></div>
     </div>
     <footer>
-      <p>&copy; 2025 Bianca. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Bruno Alexandre. Todos os direitos reservados.</p>
     </footer>
     <script src="script.js"></script>
   </body>
