--- a/index.html
+++ b/index.html
@@ -45,28 +45,28 @@
           <br>
           <img src="assets/img/lampada.png" alt="Lâmpada">
           <br>
-          <a class="teste" href="portfólio-1242114138/Lampada/index.html">Lâmpada</a>
+          <a class="teste" href="portfólio-1242114138/8- Lampada/index.html">Lâmpada</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/calculadora.png" alt="Calculadora">
           <br>
-          <a class="teste" href="portfólio-1242114138/Calculadora/index.html">Calculadora</a>
+          <a class="teste" href="portfólio-1242114138/2- Calculadora/index.html">Calculadora</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/oculto.png" alt="Número Oculto">
           <br>
-          <a class="teste" href="portfólio-1242114138/número-oculto/index.html">Número Oculto</a>
+          <a class="teste" href="portfólio-1242114138/1- número-oculto/index.html">Número Oculto</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/quiz.png" alt="Quiz">
           <br>
-           <a class="teste" href="portfólio-1242114138/quiz/index.html">Quiz</a>
+           <a class="teste" href="portfólio-1242114138/3- quiz/index.html">Quiz</a>
         </div>
 
         <div class="card">
@@ -87,14 +87,14 @@
           <br>
           <img src="assets/img/carro.png" alt="Selecione um carro">
           <br>
-          <a class="teste" href="portfólio-1242114138/carro/index.html">Selecione um Carro</a>
+          <a class="teste" href="portfólio-1242114138/5- carro/index.html">Selecione um Carro</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/memoria.png" alt="Jogo da Memória">
           <br>
-          <a class="teste" href="portfólio-1242114138/Jogo-da-memoria/index.html">Jogo da Memória</a>
+          <a class="teste" href="portfólio-1242114138/6- Jogo-da-memoria/index.html">Jogo da Memória</a>
         </div>
       </div>
 
