--- a/index.html
+++ b/index.html
@@ -45,56 +45,56 @@
           <br>
           <img src="assets/img/lampada.png" alt="Lâmpada">
           <br>
-          <a class="teste" href="portfólio-1242114138/8- Lampada/index.html">Lâmpada</a>
+          <a class="teste" href="portfólio-1242114138/8- Lampada/index.html" target="_blank">Lâmpada</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/calculadora.png" alt="Calculadora">
           <br>
-          <a class="teste" href="portfólio-1242114138/2- Calculadora/index.html">Calculadora</a>
+          <a class="teste" href="portfólio-1242114138/2- Calculadora/index.html" target="_blank">Calculadora</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/oculto.png" alt="Número Oculto">
           <br>
-          <a class="teste" href="portfólio-1242114138/1- número-oculto/index.html">Número Oculto</a>
+          <a class="teste" href="portfólio-1242114138/1- número-oculto/index.html" target="_blank">Número Oculto</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/quiz.png" alt="Quiz">
           <br>
-           <a class="teste" href="portfólio-1242114138/3- quiz/index.html">Quiz</a>
+           <a class="teste" href="portfólio-1242114138/3- quiz/index.html" target="_blank">Quiz</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/kanban.png" alt="Lista de Tarefas">
           <br>
-          <a class="teste" href="portfólio-1242114138/4-lista-de-tarefas-kanban/index.html">Lista Tarefas</a>
+          <a class="teste" href="portfólio-1242114138/4-lista-de-tarefas-kanban/index.html" target="_blank">Lista Tarefas</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/BankSE.png" alt="Conta Digital">
           <br>
-          <a class="teste" href="portfólio-1242114138/7-conta-digital/index.html">Conta Digital</a>
+          <a class="teste" href="portfólio-1242114138/7-conta-digital/index.html" target="_blank">Conta Digital</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/carro.png" alt="Selecione um carro">
           <br>
-          <a class="teste" href="portfólio-1242114138/5- carro/index.html">Selecione um Carro</a>
+          <a class="teste" href="portfólio-1242114138/5- carro/index.html" target="_blank">Selecione um Carro</a>
         </div>
 
         <div class="card">
           <br>
           <img src="assets/img/memoria.png" alt="Jogo da Memória">
           <br>
-          <a class="teste" href="portfólio-1242114138/6- Jogo-da-memoria/index.html">Jogo da Memória</a>
+          <a class="teste" href="portfólio-1242114138/6- Jogo-da-memoria/index.html" target="_blank">Jogo da Memória</a>
         </div>
       </div>
 
@@ -122,7 +122,8 @@
   <section id="contato" class="secao">
     <h2>Contato</h2>
     <div class="contato-container">
-      <div class="contato-box">
+      <div class="contato-box-end">
+        <p><strong>Endereço:</strong></p>
         <p> Avenida Maria Pastora, 650</p>
       </div>
       <div class="contato-box">
